Combination Sum 1 is done